SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

The file chooser remembers the last selected view type (list view or details view).

Look and Feel Plugin: Dark theme for the Nimbus look and feel.
  The theme is based on Wayne Zhang's pull request
  https://github.com/squirrel-sql-client/squirrel-sql-code/pull/12
  and was integrated into SQuirreL's Look and Feel Plugin.
  Thanks to Wayne Zhang for the theme.

#156 The table cell data popup and the Object tree source tabs support searching.
  See the find button at the lower right of the table cell data popup.
  See the find bar at the bottom of the Object tree source tabs.

Table cell data popup: The right mouse menu entries "Wrap Lines on/off" and "Wrap Word on/off"
  are now checked menu items and their dependence is respected.

Table cell data popup: New right mouse menu which offers to compare
  selected text or the complete cell content to clipboard.

Table cell data popup: Replaced legacy XML formatting by standard XML library formatting.
  Replaced formatting error dialogs by message panel and logging.

Data compare: "Compare selected cells" function of result tables now offers to
  compare raw data instead of markdown format if cells from single columns were selected.
  This is may be useful when cells contain multiple lines.
  Hint: SQuirreL allows to configure if table cells render line feeds by "\n".
  See menu File --> Global Preferences --> tab "Data Type Controls"
  --> sections "CHAR, VARCHAR, ..." and "CLOB ..."

SQL editor offers to compare selected text or complete editor content to clipboard.
  See the editor's right mouse menu or tolls popup (ctrl+t).

Data compare: New submenu in SQL result's "Compare selected cells" menu
  which allows to compare cells to clipboard.
