@@ -56,6 +56,4 @@ RecentFilesController.preview.errorReadingFile=Error reading file {0}: {1}
 RecentFilesController.copy.filename=Copy file name
 RecentFilesController.copy.path=Copy path
 
-RecentFilesController.failed.to.open.file=Failed to open file: {0}
-
 RecentFilesController.remove.from.recent=Remove
