@@ -6,3 +6,5 @@ MyURLClassLoader.errorLoadingFile=Error occurred trying to load file {0}
 MyURLClassLoader.noAssignCheck=Failed to load {0} in {1} to check if it is assignable to {2}. Reason: {3}
 
 TaskThreadPool.errorDuringTaskExecMsg=Error occurred during task execution:
+
+DesktopUtil.failed.to.open.file=Failed to open file: {0}
